# braunkrones-ansible

./: README.md  ansible.cfg  pyproject.toml  requirements.yml  secrets.yml
bootstrapping/: README.MD  bootstrap-fedora-rhel.sh
bootstrapping/playbooks/: system-bootstrap.yml
fedora-rhel-roles/ssh/tasks/: main.yml
fedora-rhel-roles/update-upgrade/tasks/: main.yml
managed-node-setup/RHEL-Fedora/: README.md  managed-node-setup.sh  managed-node-setup.yaml
managed-node-setup/RHEL/Fedora/: managed-node-setup.sh
playbooks/: desktop-setup.yml  system-bootstrap.yml
roles/desktop_flatpacks/defaults/: main.yml
roles/desktop_flatpacks/tasks/: main.yml
roles/desktop_packages/: README.md
roles/desktop_packages/defaults/: main.yml
roles/desktop_packages/tasks/: main.yml
roles/desktop_repos/: README.md
roles/desktop_repos/defaults/: main.yml
roles/desktop_repos/tasks/: main.yml
roles/desktop_wallpapers/: README.md
roles/desktop_wallpapers/defaults/: main.yml
roles/desktop_wallpapers/tasks/: main.yml
roles/desktop_wallpapers/templates/: google-photos-wallpapers-sync.service.j2  google-photos-wallpapers-sync.timer.j2  hydrapaper-wallpaper.service.j2  hydrapaper-wallpaper.timer.j2
roles/ssh_create_keypair/: README.md
roles/ssh_create_keypair/tasks/: main.yml
roles/ssh_sync_authorised-users/: README.md
roles/ssh_sync_authorised-users/tasks/: main.yml
roles/sshd_configure/: README.md
roles/sshd_configure/defaults/: main.yml
roles/sshd_install/: README.md
roles/tailscale_configure/: README.md
roles/user_create/: README.md
(+8 files in other folders)
