[project]
name = "braunkrones-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Krones",email = "krones.sam@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "ansible (>=13.6.0,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false